# xrd-rust

./: CITATION.cff  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
example/: bench_parallel.py  minimum_code_XRD_calc.py
python/xrd_rust_calculator/: __init__.py  xrd_calculator_rust.py
src/: lib.rs
