[package]
name = "xrd_rust_accelerator"
version = "0.1.0"
edition = "2021"

[lib]
name = "xrd_rust_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib"] }
rayon = "1.10"
numpy = "0.23"
ndarray = "0.15"
wide = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
