[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "xrd-rust"
version = "0.2.0"
description = "Fast XRD pattern calculator with Rust acceleration (5-10x faster than original pymatgen implementation)"
authors = [{name = "Miroslav Lebeda", email = "lebedmi2@cvut.cz"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["xrd", "crystallography", "materials-science", "rust", "pymatgen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

dependencies = [
    "numpy>=1.20",
    "pymatgen>=2023.0.0",
    "orjson>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/bracerino/xrd-rust"
Repository = "https://github.com/bracerino/xrd-rust"
Issues = "https://github.com/bracerino/xrd-rust/issues"

[tool.maturin]
python-source = "python"
module-name = "xrd_rust_calculator.xrd_rust_accelerator"
features = ["pyo3/extension-module"]
